--- a/arch/arm/boot/dts/qcom/msm8937-mdss.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-mdss.dtsi
@@ -318,6 +318,7 @@
 			clock-names = "byte_clk", "pixel_clk", "core_clk",
 				"byte_clk_rcg", "pixel_clk_rcg";
 
+			qcom,regulator-ldo-mode;
 			qcom,platform-strength-ctrl = [ff 06];
 			qcom,platform-bist-ctrl = [00 00 b1 ff 00 00];
 			qcom,platform-regulator-settings = [03 08 07 00
