--- a/arch/arm/boot/dts/qcom/msm8937-pmi8950-cdp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-pmi8950-cdp.dtsi
@@ -20,8 +20,10 @@
 		cell-index = <0>;
 		compatible = "qcom,camera-flash";
 		qcom,flash-type = <1>;
-		qcom,flash-source = <&pmi8950_flash0 &pmi8950_flash1>;
-		qcom,torch-source = <&pmi8950_torch0 &pmi8950_torch1>;
+//[Start]modefy by qiurongzhang@tcl.com 20171206 for flash current unstable
+		qcom,flash-source = <&pmi8950_flash0 /*&pmi8950_flash1*/>;
+		qcom,torch-source = <&pmi8950_torch0 /*&pmi8950_torch1*/>;
+//[END]modefy by qiurongzhang@tcl.com 20171206 for flash current unstable
 		qcom,switch-source = <&pmi8950_switch>;
 	};
 };
