--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -429,7 +429,7 @@
 		};
 
 		labibb: qpnp-labibb-regulator {
-			status = "disabled";
+			status = "enabled"; // MODIFIED by junwen.ye, 2017-10-10,BUG-5392294
 			spmi-dev-container;
 			compatible = "qcom,qpnp-labibb-regulator";
 			#address-cells = <1>;
@@ -448,9 +448,11 @@
 				qcom,qpnp-ibb-step-size = <100000>;
 				qcom,qpnp-ibb-slew-rate = <2000000>;
 				qcom,qpnp-ibb-use-default-voltage;
-				qcom,qpnp-ibb-init-voltage = <5500000>;
+				/* modify begin by yusen.ke.sz@tcl.com at 20180109 for Reduce power consumption*/
+				qcom,qpnp-ibb-init-voltage = <5000000>;
 				qcom,qpnp-ibb-init-amoled-voltage = <4000000>;
-				qcom,qpnp-ibb-init-lcd-voltage = <5500000>;
+				qcom,qpnp-ibb-init-lcd-voltage = <5000000>;
+				/* modify end by yusen.ke.sz@tcl.com at 20180109 for Reduce power consumption*/
 
 				qcom,qpnp-ibb-soft-start = <1000>;
 
@@ -480,9 +482,9 @@
 				qcom,qpnp-lab-step-size = <100000>;
 				qcom,qpnp-lab-slew-rate = <5000>;
 				qcom,qpnp-lab-use-default-voltage;
-				qcom,qpnp-lab-init-voltage = <5500000>;
+				qcom,qpnp-lab-init-voltage = <5000000>;/* modify by yusen.ke.sz@tcl.com at 20180109 for Reduce power consumption*/
 				qcom,qpnp-lab-init-amoled-voltage = <4600000>;
-				qcom,qpnp-lab-init-lcd-voltage = <5500000>;
+				qcom,qpnp-lab-init-lcd-voltage = <5000000>;/* modify by yusen.ke.sz@tcl.com at 20180109 for Reduce power consumption*/
 
 				qcom,qpnp-lab-soft-start = <800>;
 
@@ -519,7 +521,7 @@
 			qcom,fdbk-output = "auto";
 			qcom,vref-mv = <350>;
 			qcom,switch-freq-khz = <800>;
-			qcom,ovp-mv = <29500>;
+			qcom,ovp-mv = <17800>;//<29500>;//modify by yusen.ke.sz@tcl.com at 20180108 for HW request
 			qcom,ilim-ma = <980>;
 			qcom,boost-duty-ns = <26>;
 			qcom,mod-freq-khz = <9600>;
@@ -528,7 +530,7 @@
 			qcom,hyb-thres = <625>;
 			qcom,sync-dly-us = <800>;
 			qcom,fs-curr-ua = <20000>;
-			qcom,led-strings-list = [00 01];
+			qcom,led-strings-list = [00 01 02]; // MODIFIED by junwen.ye, 2017-11-27,BUG-5660827
 			qcom,en-ext-pfet-sc-pro;
 			qcom,cons-sync-write-delay-us = <1000>;
 		};
@@ -564,7 +566,7 @@
 				qcom,max-current = <1000>;
 				qcom,duration = <1280>;
 				qcom,id = <0>;
-				qcom,current = <625>;
+				qcom,current = <1000>; // modified by li.tan for flash 1A current 20171226
 			};
 
 			pmi8950_flash1: qcom,flash_1 {
