--- a/arch/arm/boot/dts/qcom/msm8937-camera-sensor-cdp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-camera-sensor-cdp.dtsi
@@ -168,12 +168,14 @@
 		qcom,cam-vreg-min-voltage = <0 2800000 2850000>;
 		qcom,cam-vreg-max-voltage = <0 2800000 2850000>;
 		qcom,cam-vreg-op-mode = <0 80000 100000>;
+/*add start by li.tan@tcl.com for Camera porting 20171012*/
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk0_default
 				&cam_sensor_rear_default
-				&cam_sensor_rear_vdig>;
+				&cam_sensor_verg_default>;
 		pinctrl-1 = <&cam_sensor_mclk0_sleep &cam_sensor_rear_sleep
-				&cam_sensor_rear_vdig_sleep>;
+				&cam_sensor_verg_sleep>;
+/*add end by li.tan@tcl.com for Camera porting 20171012*/
 		gpios = <&tlmm 26 0>,
 			<&tlmm 36 0>,
 			<&tlmm 35 0>,
