--- a/arch/arm/boot/dts/qcom/msm8937.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937.dtsi
@@ -35,7 +35,7 @@
 					dev = "/dev/block/platform/soc/7824900.sdhci/by-name/vendor";
 					type = "ext4";
 					mnt_flags = "ro,barrier=1,discard";
-					fsmgr_flags = "wait";
+					fsmgr_flags = "wait,verify";
 					status = "ok";
 				};
 				system {
@@ -43,7 +43,7 @@
 					dev = "/dev/block/platform/soc/7824900.sdhci/by-name/system";
 					type = "ext4";
 					mnt_flags = "ro,barrier=1,discard";
-					fsmgr_flags = "wait";
+					fsmgr_flags = "wait,verify";
 					status = "ok";
 				};
 
@@ -59,7 +59,7 @@
 		other_ext_mem: other_ext_region@0 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0x0 0x85b00000 0x0 0xd00000>;
+			reg = <0x0 0x84a00000 0x0 0x1e00000>;
 		};
 
 		modem_mem: modem_region@0 {
@@ -114,6 +114,23 @@
 			reg = <0x0 0x90000000 0x0 0x1400000>;
 		};
 
+		/* BEGIN reserved mem for log, by xiaoju.liang@tcl.com */
+		ramoops_mem {
+			reg = <0x0 0x8f800000 0x0 0x80000>;
+		};
+
+		wdog_dump_mem {
+			reg = <0x0 0x8f880000 0x0 0x4000>;
+		};
+
+		poweron_reason_mem {
+			reg = <0x0 0x8f884000 0x0 0x1000>;
+		};
+
+        reserved_log_mem {
+			reg = <0x0 0x8f885000 0x0 0x5000>;
+        };
+		/* END xiaoju.liang@tcl.com */
 	};
 
 	aliases {
@@ -424,7 +441,11 @@
 
 	qcom,msm-thermal {
 		compatible = "qcom,msm-thermal";
+		/*  //change by TCT.shicuiping for thermal setting
 		qcom,sensor-id = <5>;
+		*/
+		qcom,sensor-id = <4>;
+		//change by TCT.shicuiping for thermal setting
 		qcom,poll-ms = <250>;
 		qcom,limit-temp = <60>;
 		qcom,temp-hysteresis = <10>;
@@ -433,7 +454,11 @@
 		qcom,core-temp-hysteresis = <10>;
 		qcom,hotplug-temp = <105>;
 		qcom,hotplug-temp-hysteresis = <15>;
+		/*  //change by TCT.shicuiping for thermal setting
 		qcom,freq-mitigation-temp = <105>;
+		*/
+		qcom,freq-mitigation-temp = <75>;
+		//change by TCT.shicuiping for thermal setting
 		qcom,freq-mitigation-temp-hysteresis = <15>;
 		qcom,freq-mitigation-value = <400000>;
 		qcom,online-hotplug-core;
@@ -1552,9 +1577,9 @@
 		qcom,ce-opp-freq = <100000000>;
 	};
 
-	qcom_seecom: qseecom@85b00000 {
+	qcom_seecom: qseecom@84a00000 {
 		compatible = "qcom,qseecom";
-		reg = <0x85b00000 0x800000>;
+		reg = <0x84a00000 0x1900000>;
 		reg-names = "secapp-region";
 		qcom,hlos-num-ce-hw-instances = <1>;
 		qcom,hlos-ce-hw-instance = <0>;
